...
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habitTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="20sp"
                    android:gravity="center"
...
